--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,3 +8,15 @@ body {
 	height: 100%;
 	overflow: hidden
 }
+
+@layer components {
+	.btn-menu {
+		@apply btn bg-slate-200 w-40 rounded-sm border-none text-black hover:bg-blue-500 hover:text-white no-animation
+	}
+	.btn-menu-active {
+		@apply bg-blue-600 text-white
+	}
+	.setting-menu {
+		@apply card w-56 h-28 text-white rounded-md flex text-xl font-semibold
+	}
+}
