feat: new add interface

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,6 @@ body {
 		@apply card w-56 h-28 text-white rounded-md flex text-xl font-semibold
 	}
 	.setting-container {
-		@apply flex-1 bg-white rounded-md p-2 flex flex-col gap-2
+		@apply flex-1 bg-white rounded-md p-2 flex flex-col gap-2 max-h-full
 	}
 }
